Add next/previous post link support to templates.

--- a/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
+++ b/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
@@ -130,6 +130,10 @@ article {
     p:first-child {
         .font-size-default(1, 1);
     }
+
+    .block-grid > li {
+        text-indent: 0;
+    }
 }
 
 .image {
