--- a/engineer/themes/oleb/static/stylesheets/oleb.less
+++ b/engineer/themes/oleb/static/stylesheets/oleb.less
@@ -265,6 +265,12 @@ a.button {
     }
 }
 
+.post-nav {
+    ul {
+        padding-left: 0;
+    }
+}
+
 /////////////////////
 // PYGMENTS / CODE //
 /////////////////////
