--- a/engineer/themes/oleb/templates/theme/post_list.html
+++ b/engineer/themes/oleb/templates/theme/post_list.html
@@ -10,26 +10,27 @@
             {% include 'theme/_single_post_front.html' %}
         {% endfor %}
     </div>
-    <div class="row">
-    <div class="twelve columns">
-        <ul class="block-grid three-up">
-            <li style="text-align: left;">
-                {% if has_next %}
-                    <a href="{{ urlname('listpage', (slice_num + 1)) }}">← older posts</a>
-                {% else %}
-                    &nbsp;
-                {% endif %}
-            </li>
-            <li style="text-align: center;">
-                <a href="{{ urlname('archives') }}"> &ndash; archives &ndash; </a>
-            </li>
-            <li style="text-align: right;">
-                {% if has_previous %}
-                    <a href="{{ urlname('listpage', (slice_num - 1)) }}">newer posts →</a>
-                {% else %}
-                    &nbsp;
-                {% endif %}
-            </li>
-        </ul>
+    <div class="row post-nav">
+        <div class="twelve columns">
+            <ul class="block-grid three-up">
+                <li style="text-align: left;">
+                    {% if has_next %}
+                        <a href="{{ urlname('listpage', (slice_num + 1)) }}">← older posts</a>
+                    {% else %}
+                        &nbsp;
+                    {% endif %}
+                </li>
+                <li style="text-align: center;">
+                    <a href="{{ urlname('archives') }}"> &ndash; archives &ndash; </a>
+                </li>
+                <li style="text-align: right;">
+                    {% if has_previous %}
+                        <a href="{{ urlname('listpage', (slice_num - 1)) }}">newer posts →</a>
+                    {% else %}
+                        &nbsp;
+                    {% endif %}
+                </li>
+            </ul>
+        </div>
     </div>
 {% endblock %}
