Update Dark Rainbow monospace font to Ubuntu Mono.

--- a/engineer/themes/dark_rainbow/static/stylesheets/_typography.less
+++ b/engineer/themes/dark_rainbow/static/stylesheets/_typography.less
@@ -4,7 +4,7 @@
 
 @font-main: myriad-pro;
 @font-heading: museo-slab;
-@font-mono: Consolas, anonymous-pro;
+@font-mono: ubuntu-mono, Consolas, monospace;
 @font-proxima: proxima-nova-sc-osf-ext-cond;
 
 .margin-calc(@desired_size, @top_percentage: 0, @bottom_percentage: 1, @top_add: 0px, @bottom_add: 0px) {
