Add comment support to Dark Rainbow and OleB themes.
Both Disqus and Intense Debate are supported. Resolves issues #21 and #27.

--- a/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
+++ b/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
@@ -432,6 +432,15 @@ div.row.archives {
     .font-size-default(2, 0);
 }
 
+// COMMENTS
+#comments {
+    border-top: 3px dotted @purple;
+    margin-top: @line-height-default;
+    h1 {
+        .font-size-medium(1, .5);
+    }
+}
+
 // MISCELLANEOUS
 .permalink {
     a {
