--- a/engineer/themes/oleb/static/stylesheets/oleb.less
+++ b/engineer/themes/oleb/static/stylesheets/oleb.less
@@ -312,6 +312,16 @@ a.button {
     }
 }
 
+#comments {
+    .dotted-border(top, @grey-light);
+    padding-top: .5rem;
+
+    h1 {
+        font-size: @font-size-xl;
+        line-height: 4rem;
+    }
+}
+
 /////////////////////
 // PYGMENTS / CODE //
 /////////////////////
