--- a/engineer/themes/oleb/templates/theme/_single_post.html
+++ b/engineer/themes/oleb/templates/theme/_single_post.html
@@ -72,6 +72,20 @@
                     </ul>
                 </div>
             </div>
+            {% if theme.comments %}
+                <div class="row">
+                    <div class="nine-columns offset-by-three">
+                        <div id="comments">
+                            {% if theme.comments != 'intensedebate' %}
+                                <header>
+                                    <h1>Comments</h1>
+                                </header>
+                            {% endif %}
+                            {% include '_comments.html' %}
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
         {% endwith %}
     {% endblock post_content %}
 </div>
