Add simple search for Dark Rainbow theme.
Also documented the 'snippets' concept and reorganized some of the
core Engineer snippets.

Resolves issue #22

--- a/engineer/sample_site/templates/_sidebar.html
+++ b/engineer/sample_site/templates/_sidebar.html
@@ -9,4 +9,6 @@
     </nav>
 </section>
 
-{% include '_twitter.html' ignore missing %}
+{% include 'snippets/_search.html' ignore missing %}
+{% include 'snippets/_feed_links.html' ignore missing %}
+{% include 'snippets/_twitter.html' ignore missing %}
