--- a/engineer/templates/_sidebar.html
+++ b/engineer/templates/_sidebar.html
@@ -4,4 +4,4 @@
     <p class="replace_me">You can do this by adding a '_sidebar.html' template to your templates directory.</p>
 </section>
 
-{% include '_twitter.html' ignore missing %}
+{% include 'snippets/_twitter.html' ignore missing %}
