--- a/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
+++ b/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
@@ -320,6 +320,35 @@ header#secondary {
     border-bottom: 2px dotted @purple;
 }
 
+// SEARCH
+section#search {
+    .margin-calc(@line-height-default, .5, .5, 0, 0);
+    .font-size-default(0, 0);
+    text-align: left;
+}
+
+input.search {
+    .border-radius(5px);
+    font-family: @font-main;
+    font-size: 1.8rem;
+    margin: auto;
+    width: 90%;
+    background-color: lighten(@bg, 15%);
+    border: 1px solid lighten(@bg, 50%);
+    padding: .2em .3em;
+    color: @blue;
+}
+
+input::-webkit-input-placeholder {
+    color: @blue;
+}
+input:-moz-placeholder {
+    color: @blue;
+}
+input:-ms-input-placeholder {
+    color: @blue;
+}
+
 // POSTS
 @media only screen and (min-width: 767px) {
     .post-info {
