Share images and snippets between Dark Rainbow and OleB themes.

--- a/engineer/themes/_shared/templates/snippets/_feed_links.html
+++ b/engineer/themes/_shared/templates/snippets/_feed_links.html
@@ -2,7 +2,7 @@
     <div>
         <ul>
             <li>
-                <img src="{{ STATIC_URL }}/theme/images/rss/37.png" alt="">
+                <img src="{{ STATIC_URL }}/theme/images/rss.png" alt="">
                 <a href="{{ settings.FEED_URL }}">subscribe to the feed</a>
             </li>
         </ul>
