--- a/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
+++ b/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
@@ -85,7 +85,7 @@ blockquote {
     }
 }
 
-table {
+table:not(.codehilitetable) {
     border: 1px solid @bg-accent;
     border-collapse: separate;
     border-spacing: 0;
@@ -93,35 +93,35 @@ table {
     .margin-calc(@line-height-default, 0, 1, -1px, -1px);
     width: 100%;
     max-width: 100%;
-}
 
-th {
-    font-weight: bold;
-}
+    th {
+        font-weight: bold;
+    }
 
-th, td {
-    border-left: 1px solid @bg-accent;
-    border-top: 1px solid @bg-accent;
-    vertical-align: top;
-    padding: 8px;
-    text-align: left;
-}
+    th, td {
+        border-left: 1px solid @bg-accent;
+        border-top: 1px solid @bg-accent;
+        vertical-align: top;
+        padding: 8px;
+        text-align: left;
+    }
 
-thead {
-    tr:first-child {
-        td, th {
-            border-top: none;
-            &:first-child {
-                border-left: none;
+    thead {
+        tr:first-child {
+            td, th {
+                border-top: none;
+                &:first-child {
+                    border-left: none;
+                }
             }
         }
     }
-}
 
-tbody {
-    tr {
-        td:first-child {
-            border-left: none;
+    tbody {
+        tr {
+            td:first-child {
+                border-left: none;
+            }
         }
     }
 }
@@ -215,13 +215,35 @@ article {
 }
 
 // PYGMENTS / CODE
-.linenodiv {
-    color: @light;
-    font-weight: normal;
-    padding-right: 10px;
+pre, code {
+    font-family: @font-mono;
+    overflow: auto;
+    margin: 0;
 }
 
-pre, code, div.codehilite { // nice scrollbars in webkit
+p > code, em > code, strong > code {
+    white-space: nowrap;
+    .font-size-default();
+    margin: 0;
+}
+
+.code-border {
+    border: 1px solid @bg-accent;
+    border-left: 10px solid @bg-accent;
+    padding-left: 5px;
+    margin: 0 0 0 -15px;
+    .font-size-small();
+}
+
+article, div, p {
+    > div.codehilite {
+        .code-border();
+        .margin-calc(@line-height-default, 0, 1, -1px, -1px);
+    }
+}
+
+/* nice scrollbars in webkit */
+pre, code, div.codehilite, table.codehilitetable {
     ::-webkit-scrollbar {
         height: 10px;
         width: 10px;
@@ -244,27 +266,25 @@ pre, code, div.codehilite { // nice scrollbars in webkit
     }
 }
 
-pre {
-    border: 1px solid @bg-accent;
-    border-left: 10px solid @bg-accent;
-    padding-left: 5px;
-    margin: 0 0 0 -15px;
+table.codehilitetable {
+    width: 100%;
+    table-layout: fixed;
+    .code-border();
+
+    td.linenos {
+        border-right: 1px solid @bg-accent;
+        width: 26px;
+    }
+
+    td.code {
+        padding-left: 10px;
+    }
 }
 
-pre, code {
-    .font-size-small();
-    font-family: @font-mono;
-    overflow: auto;
-}
-
-p > code, em > code, strong > code {
-    white-space: nowrap;
-    .font-size-default();
-    margin: 0;
-}
-
-div.codehilite {
-    .margin-calc(@line-height-default, 0, 1, -1px, -1px);
+div.linenodiv {
+    color: @light;
+    font-weight: normal;
+    padding-right: 10px;
 }
 
 div.codehilite, table.codehilitetable {
@@ -342,9 +362,11 @@ input.search {
 input::-webkit-input-placeholder {
     color: @blue;
 }
+
 input:-moz-placeholder {
     color: @blue;
 }
+
 input:-ms-input-placeholder {
     color: @blue;
 }
