Fix up PyCharm inspection/style settings and fix some minor formatting issues.

--- a/engineer/themes/_shared/templates/_comments.html
+++ b/engineer/themes/_shared/templates/_comments.html
@@ -28,6 +28,6 @@
         var idcomments_post_id = '{{ post.url }}';
         var idcomments_post_url = '{{ post.absolute_url }}';
     </script>
-    <span id="IDCommentsPostTitle" style="display:none"></span>
+    <span id="IDCommentsPostTitle" style="display:none;"></span>
     <script type='text/javascript' src='http://www.intensedebate.com/js/genericCommentWrapperV2.js'></script>
 {% endif %}
