--- a/engineer/templates/core/_base.html
+++ b/engineer/templates/core/_base.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
 <!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
@@ -83,27 +83,6 @@
                 window.jQuery || document.write('<script src="{{ settings.ENGINEER.JQUERY_URL }}"><\/script>')
             </script>
         {%- endif %}
-    {% endblock %}
-
-    {% block twitter %}
-        {% if theme.twitter_id %}
-            {% filter compress %}
-                <script type="text/javascript" src="{{ settings.ENGINEER.TWEET_URL }}"></script>
-                <script type='text/javascript'>
-                    jQuery(function ($) {
-                        $(".tweet").tweet({
-                            username:'{{ theme.twitter_id }}',
-                            join_text:null,
-                            avatar_size:null,
-                            retweets:false,
-                            count:{{ theme.tweet_count if theme.tweet_count else 5 }},
-                            loading_text:"loading tweets...",
-                            template:"{text}{time}"
-                        });
-                    });
-                </script>
-            {% endfilter %}
-        {% endif %}
     {% endblock %}
 
     <!-- IE Fix for HTML5 Tags -->
