--- a/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
+++ b/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
@@ -227,6 +227,7 @@ p > code, em > code, strong > code {
     margin: 0;
 }
 
+//noinspection CssOverwrittenProperties
 .code-border {
     border: 1px solid @bg-accent;
     border-left: 10px solid @bg-accent;
