--- a/engineer/themes/oleb/static/stylesheets/oleb.less
+++ b/engineer/themes/oleb/static/stylesheets/oleb.less
@@ -7,6 +7,7 @@
 // HEADER STYLES //
 ///////////////////
 
+//noinspection CssOverwrittenProperties
 header#primary {
     margin-bottom: 3rem;
     padding-bottom: 2rem;
