Add "via" information to feed content.
Fixes #35.

--- a/engineer/templates/core/feeds/content.jinja2
+++ b/engineer/templates/core/feeds/content.jinja2
@@ -5,4 +5,13 @@
     </div>
 {% else %}
     {{ post.content }}
+    {% if post.via %}
+        <div>
+            {% if post.via_link %}
+                via <a href="{{ post.via_link }}">{{ post.via }}</a>
+            {% else %}
+                via {{ post.via }}
+            {% endif %}
+        </div>
+    {% endif %}
 {% endif %}
