Update Typekit URLs.

--- a/engineer/themes/dark_rainbow/templates/theme/base.html
+++ b/engineer/themes/dark_rainbow/templates/theme/base.html
@@ -14,7 +14,7 @@
 {%- block scripts_top %}
     {# TYPEKIT #}
     <script type="text/javascript"
-            src="http://use.typekit.com/{{ theme.typekit_id }}.js"></script>
+            src="http://use.typekit.net/{{ theme.typekit_id }}.js"></script>
     <script type="text/javascript">
         try {
             Typekit.load();
