--- a/engineer/templates/core/_base.html
+++ b/engineer/templates/core/_base.html
@@ -1,15 +1,15 @@
 ﻿<!DOCTYPE html>
-<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
-<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html lang="en"> <!--<![endif]-->
+<html class="no-js"> <!--<![endif]-->
 <head>
     <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- Set the viewport width to device width for mobile -->
-    <meta name="viewport" content="width=device-width"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>{% block site_title %}{{ settings.SITE_TITLE }}{% endblock %}</title>
 
@@ -25,6 +25,14 @@
     <link rel="alternate" type="application/atom+xml"
           title="{{ settings.SITE_TITLE }} Atom Feed"
           href="{{ urlname('feed') }}"/>
+
+    {% block normalizecss %}
+        {% if theme.use_normalize_css %}
+            {% filter compress %}
+                <link rel="stylesheet" href="{{ settings.ENGINEER.NORMALIZE_CSS_URL }}">
+            {% endfilter %}
+        {% endif %}
+    {% endblock %}
 
     {% block foundationcss %}
         {% if theme.use_foundation %}
@@ -78,19 +86,26 @@
     {% block jquery %}
         {% if theme.use_jquery -%}
             <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
-            <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+            <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
             <script>
                 window.jQuery || document.write('<script src="{{ settings.ENGINEER.JQUERY_URL }}"><\/script>')
             </script>
         {%- endif %}
     {% endblock %}
 
-    <!-- IE Fix for HTML5 Tags -->
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body class="{%- block body_class %}{% endblock -%}">
+{%- block browsehappy -%}
+    <!--[if lt IE 7]>
+    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+<![endif]-->
+{%- endblock -%}
 {%- block body %}{% endblock -%}
 
 {% block foundation_js %}
