Updates for theme compatibility with upcoming Bootswatch themes.

--- a/engineer/templates/_nav_primary.html
+++ b/engineer/templates/_nav_primary.html
@@ -1,7 +1,3 @@
-{% from 'core/_macros.html' import navigation_link with context %}
-
 <ul class="replace_me">
-    {{ navigation_link('this is', urlname('home'), []) }}
-    {{ navigation_link('sample', urlname('home'), []) }}
-    {{ navigation_link('navigation', urlname('home'), []) }}
+    {% include "_nav_primary_links.html" with context %}
 </ul>
