Reorganize theme files so fewer files are copied during a build.

--- a/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
+++ b/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
@@ -1,8 +1,8 @@
-@import "../../engineer/baseline.less";
+@import "./shared/baseline.less";
 @import "_mixins.less";
 @import "_colors.less";
 @import "_typography.less";
-@import "../../engineer/_solarized.less";
+@import "./shared/_solarized.less";
 
 .replace_me {
     background-color: yellow;
