--- a/engineer/themes/oleb/static/stylesheets/oleb.less
+++ b/engineer/themes/oleb/static/stylesheets/oleb.less
@@ -1,4 +1,4 @@
-@import "../../engineer/_base_mixins.less";
+@import "./shared/_base_mixins.less";
 @import "_colors.less";
 @import "_typography.less";
 @import "_element_styles.less";
