--- a/engineer/themes/oleb/templates/theme/base.html
+++ b/engineer/themes/oleb/templates/theme/base.html
@@ -12,7 +12,7 @@
     {%- block additional_stylesheets %}
         {% filter compress %}
             <link rel="stylesheet"
-                  href="{{ settings.STATIC_URL }}/engineer/github.css"/>
+                  href="{{ settings.STATIC_URL }}/theme/stylesheets/github.css"/>
         {% endfilter %}
     {% endblock -%}
 {% endblock -%}
