Add support for bigfoot.js to Dark Rainbow and OleB.

--- a/engineer/_themes/dark_rainbow/static/stylesheets/dark_rainbow.less
+++ b/engineer/_themes/dark_rainbow/static/stylesheets/dark_rainbow.less
@@ -449,6 +449,15 @@ div.row.archives {
     .font-size-default(2, 0);
 }
 
+// FOOTNOTES
+.footnote-button {
+
+}
+
+.footnote-content-wrapper {
+    color: @bg;
+}
+
 // COMMENTS
 #comments {
     border-top: 3px dotted @purple;
